--- a/Part2-classification/DAT158-Part2-Classification.ipynb
+++ b/Part2-classification/DAT158-Part2-Classification.ipynb
@@ -297,7 +297,16 @@
    },
    "outputs": [],
    "source": [
-    "?fetch_mldata"
+    "#?fetch_mldata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "The below cell must be run in case mldata.org is down (which is often, unfortunately..)"
    ]
   },
   {
@@ -308,7 +317,7 @@
    },
    "outputs": [],
    "source": [
-    "#fetch_mnist()"
+    "fetch_mnist()"
    ]
   },
   {
@@ -406,7 +415,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -980,11 +988,29 @@
     "hidden": true
    },
    "source": [
-    "By setting aside a subset of the training data (a hold-out set) as a test set we can use it to evaluate model perfomance. Remember (again!) we're not interested in how well our models perform on the training set, what we're really after is how well they generalize to unseen data. The test set is meant to simulate unseen data (and should therefore not be touched when constructing and tuning our models). \n",
+    "**Test set**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "By setting aside a subset of the training data (a hold-out set) as a test set we can use it to evaluate model performance. Remember (again!) we're not interested in how well our models perform on the training set, what we're really after is how well they generalize to unseen data. The test set is meant to simulate unseen data (and should therefore not be touched when constructing and tuning our models). \n",
     "\n",
     "<img width=50% src=\"assets/testsplit.png\">\n",
     "\n",
     "This is what we did earlier. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "**Validation set**"
    ]
   },
   {
@@ -1005,7 +1031,7 @@
    },
    "source": [
     "> **Your turn!**\n",
-    "- Split `(X_train, y_train)` into two parts: one for training, one for validation. You can call the new data sets and label sets `X_train_new, X_val, y_train_5_new, y_val_5`\n",
+    "- Split `(X_train, y_train_5)` into two parts: one for training, one for validation. You can call the new data sets and label sets `X_train_new, X_val, y_train_5_new, y_val_5`\n",
     "- Train your model again on the new training set, and compute its accuracy on the validation set using the `score` method: `model.score(X_val, y_val_5)` \n",
     "- Is the result good? What accuracy would a random guesser have?\n",
     "- Play around with some of the parameters of `SGDClassifier` and try to improve the result on the validation set. Once you've found some parameters that seem good, test on the test set: `model.predict(X_test)` and `model.score(X_test, y_test_5)` (If you want to be thorough, use grid search to test parameter combinations)."
@@ -1078,7 +1104,7 @@
    },
    "outputs": [],
    "source": [
-    "cv_scores = cross_val_score(sgd_clf, X_train, y_train_5, cv=5, scoring=\"accuracy\")\n",
+    "cv_scores = cross_val_score(sgd_clf, X_train, y_train_5, cv=5, scoring=\"accuracy\", n_jobs=-1)\n",
     "print(cv_scores)"
    ]
   },
@@ -1125,7 +1151,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -1446,7 +1471,7 @@
     "hidden": true
    },
    "source": [
-    "## $F_1$ score"
+    "### $F_1$ score"
    ]
   },
   {
@@ -2094,8 +2119,8 @@
    },
    "outputs": [],
    "source": [
-    "print(f'The average precision score of SGDClassifier is: {aps_sgd}\\n')\n",
-    "print(f'The average precision score of RF is: {aps_rf}')"
+    "print(f'The average precision score of SGDClassifier is: {aps_sgd:.3f}\\n')\n",
+    "print(f'The average precision score of RF is: {aps_rf:.3f}')"
    ]
   },
   {
@@ -2594,7 +2619,22 @@
     "hidden": true
    },
    "source": [
+    "> **Your turn!**\n",
+    "- If you followed the mini-tutorial on how to use XGBoost with GridSearchCV and RandomizedSearchCV, use what you learned to create an XGBoost model for the full multi-class problem. How high can you get the accuracy on the 10.000 test images? (I recommend not trying that many parameter settings unless you have a Cuda-compatible and Cuda-enabled GPU [or *a lot* of time on your hands])\n",
+    "\n",
+    "> We'll learn more about XGBoost and related models later in the course."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "> **Your turn!**\n",
+    "\n",
     "> A *very ambitious* project if you feel up for it: repeat what we did above, but replace the images with skin cancer images from the ISIC archive (https://isic-archive.com/). You can find a convenient copy of the data here: https://challenge2018.isic-archive.com/. I recommend simplifying to a \"benign\" versus \"abnormal\" prediction task by reducing the number of categories in the data set to two. \n",
+    "\n",
     "\n",
     "> The most difficult part of this problem is to get the data in a form in which you can feed it to machine learning models. Once that's done, to get a model that's not completely horrible you'll have to do some data preprocessing (like scaling the images and the pixel values). And also use a powerful model with well-tuned hyperparameters. Still you won't score very well. Unless you use deep learning.... See https://www.nature.com/articles/nature21056. "
    ]
@@ -2616,7 +2656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
