--- a/Part2-classification/DAT158-Part2-Classification.ipynb
+++ b/Part2-classification/DAT158-Part2-Classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alexander S. Lundervold, August 28th, 2018"
+    "Alexander S. Lundervold, August 30th, 2018"
    ]
   },
   {
@@ -1151,6 +1151,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -2121,6 +2122,48 @@
    "source": [
     "print(f'The average precision score of SGDClassifier is: {aps_sgd:.3f}\\n')\n",
     "print(f'The average precision score of RF is: {aps_rf:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "We also see that, unsurprisingly, the accuracy of the random forest is way higher than the SGD classifier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "cross_val_score(forest_clf, X_train, y_train_5, cv=3).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "cross_val_score(sgd_clf, X_train, y_train_5, cv=3).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "...but also that it is more than 4 times slower in making its predictions.."
    ]
   },
   {
