--- a/Part2-classification/DAT158-Part2-Classification.ipynb
+++ b/Part2-classification/DAT158-Part2-Classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alexander S. Lundervold, August 30th, 2018"
+    "Alexander S. Lundervold, August 31th, 2018"
    ]
   },
   {
@@ -1054,9 +1054,7 @@
     "hidden": true
    },
    "source": [
-    "Another frequently used way to set aside a test set is to use *cross-validation*. A very important advantage of this approach over the one above is that it doesn't waste as much training data. Unless you have plenty of data, cross-validation is the preferred method for estimating model performance.\n",
-    "\n",
-    "Cross-validation provides a more thorough test than splitting the data into a training set and a test set. The `train_test_split` procedure sets aside a fixed random subset of the data as a test set. If we're \"lucky\", all the difficult examples end up in the training set, while the test set contains only easy ones. That would lead to an overestimate of the true performance of our model."
+    "Another frequently used way to set aside a test set is to use *cross-validation*. A very important advantage of this approach over the one above is that it doesn't waste as much training data. Unless you have plenty of data, cross-validation is the preferred method for estimating model performance."
    ]
   },
   {
@@ -1079,7 +1077,16 @@
     "hidden": true
    },
    "source": [
-    "Note: the special case where K is set to the number of data points in the training set is called *leave-one-out*. Each fold is then a single sample.\n",
+    "Cross-validation provides a more thorough test than splitting the data into a training set and a test set. The `train_test_split` procedure sets aside a fixed random subset of the data as a test set. If we're \"lucky\", all the difficult examples end up in the training set, while the test set contains only easy ones. That would lead to an overestimate of the true performance of our model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Note: the special case of cross-validation where K is set to the number of data points in the training set is called *leave-one-out*. Each fold is then a single sample.\n",
     "\n",
     "The result of this K-fold cross validation procedure is an array of K evaluation scores.\n",
     "\n",
@@ -1135,7 +1142,7 @@
     "hidden": true
    },
    "source": [
-    "...but is it really? Remember, there are 10 digits in MNIST. A subset of the data is therefore expected to contain roughly 10% 5's and 90% non-5's. We're dealing with a highly **unbalanced dataset** (also called a *skewed dataset*).\n",
+    "...but is it really? Remember, there are 10 digits in MNIST. A subset of the data is therefore expected to contain roughly 10% 5's and 90% non-5's. We're dealing with a highly **unbalanced dataset** (also called a *skewed dataset*). In such cases accuracy is typically not a very informative measure.\n",
     "\n",
     "A model that's always predicting non-5's will have an accuracy of approximately 90%. That makes our model less impressive..."
    ]
@@ -1544,6 +1551,15 @@
    },
    "source": [
     "Unfortunately, very often it's impossible to get *both* high precision and high recall. They are typically competing quantities: when one is high, the other is low. Improving the precision often lowers the recall, and vice-versa. You have to trade one for the other"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Let's try to understand why that is."
    ]
   },
   {
@@ -2547,6 +2563,7 @@
    },
    "outputs": [],
    "source": [
+    "# Taken from the book:\n",
     "def plot_digits(instances, images_per_row=10, **options):\n",
     "    size = 28\n",
     "    images_per_row = min(len(instances), images_per_row)\n",
@@ -2650,7 +2667,7 @@
     "hidden": true
    },
    "source": [
-    "Now you've learned about some of the main practical machine learning ideas and techniques, and you're well-equipped to go out and attack real-world problems. \n",
+    "Now you've learned about some of the main practical machine learning ideas and techniques, and you're actually already well-equipped to go out and attack real-world problems. \n",
     "\n",
     "However, we've treated the models as black boxes. We haven't really discussed **how they work**! It's important to know some of the how's to be an effective machine learning practitioner. \n",
     "\n",
