--- a/Part2-classification/DAT158-Part2-Classification.ipynb
+++ b/Part2-classification/DAT158-Part2-Classification.ipynb
@@ -1041,6 +1041,188 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "**A solution presented in lecture follows:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train_new, X_val, y_train_5_new, y_val_5 = train_test_split(X_train, y_train_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "sgd_clf1 = SGDClassifier()\n",
+    "sgd_clf1.fit(X_train_new, y_train_5_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "sgd_clf1.score(X_val, y_val_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "sgd_clf2 = SGDClassifier(alpha=0.00001, average=True)\n",
+    "sgd_clf2.fit(X_train_new, y_train_5_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "sgd_clf2.score(X_val, y_val_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "sgd_clf2.score(X_test, y_test_5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "**Grid search**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "sgd_param_grid = {\n",
+    "        'alpha': [0.0001, 0.001, 0.01, 0.00001],\n",
+    "        'average': [True, False],\n",
+    "        'epsilon': [0.01, 0.1, 0.2],\n",
+    "        'power_t': [0.5, 0.3, 0.7]\n",
+    "        }\n",
+    "\n",
+    "# Note: to know which parameter combinations to try you have to understand how the model works.. \n",
+    "# But that's for later in the course!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "grid = GridSearchCV(estimator=sgd_clf, param_grid=sgd_param_grid, scoring='accuracy', n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "grid.fit(X_train_new, y_train_5_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "grid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "grid.best_estimator_.score(X_val, y_val_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "grid.best_estimator_.score(X_test, y_test_5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "*Note: you should really retrain the best estimator on the whole training set, including the validation set, before finally testing it on the test set.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "heading_collapsed": true,
     "hidden": true
    },
@@ -1476,6 +1658,15 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "To evaluate a classification model you have to consider *both* precision and recall. If you only look at precision you can be fooled by a classifier that makes way too few positive predicitons, but when it does it's typically correct (leading to a very high precision). You also need it to pick up as many of the positive cases as possible (that is, have high recall). The same is true for high recall: it's not enough to detect all the positive examples, the model also has to make correct predictions for them! Otherwise it could just say that \"everything is 5!\". "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "heading_collapsed": true,
     "hidden": true
    },
@@ -1489,8 +1680,6 @@
     "hidden": true
    },
    "source": [
-    "To evaluate a classification model you have to consider *both* precision and recall. If you only look at precision you can be fooled by a classifier that makes way too few positive predicitons, but when it does it's typically correct (leading to a very high precision). You also need it to pick up as many of the positive cases as possible (that is, have high recall). The same is true for high recall: it's not enough to detect all the postive examples, the model also has to make correct predictions for them! Otherwise it could just say that \"everything is 5!\". \n",
-    "\n",
     "One way to combine precision and recall into one number is to use the **$F_1$ score**, which is a form of average of the two (in fact, what's called the *harmonic mean*):"
    ]
   },
