comparison of gradient descent versions added

--- a/Part3-training_models/DAT158-Part3-1-GradientDescent.ipynb
+++ b/Part3-training_models/DAT158-Part3-1-GradientDescent.ipynb
@@ -6,7 +6,14 @@
    "source": [
     "<b><span style=\"font-size:150%\">Work in progress</span></b>\n",
     "\n",
-    "version September 13th, 2018"
+    "version September 15th, 2018"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alexander S. Lundervold, September 15th, 2018"
    ]
   },
   {
@@ -23,7 +30,7 @@
     "In this part of the course we start digging into some details about how machine learning models work. How some of the main models are constructed, and how they are trained on data. \n",
     "\n",
     "We'll cover the following topics in this notebook:\n",
-    "- **Linear regression**. A very basic model, but frequently used in both industry and academia. You've likely seen it before in your maths classes. This model is so simple that we actually won't have to train it to make it produce something optimal, we can essentially \"solve it\" to find the exact optimal solution. However, we'll see how the model can be trained using **gradient descent**.\n",
+    "- **Linear regression**. A very basic model, but frequently used in both industry and academia. You've likely seen it before in your maths classes. This model is so simple that you actually don't have to train it to make it produce something optimal, we can essentially \"solve it\" to find the exact optimal solution. However, we'll see how the model can be trained using **gradient descent**.\n",
     "\n",
     "\n",
     "- **Gradient descent**. This is one of the most important training algorithms in modern machine learning! It's most famously used in neural networks and deep learning, but it's actually a simple(!) optimization approach that can be used for many other models. "
@@ -159,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\cdot$ is the dot product (also called the scalar product or the inner product)."
+    "where $\\cdot$ is the dot product (also called the scalar product or the inner product). See [Khan Academy: Vector dot product and vector length](https://nb.khanacademy.org/math/linear-algebra/vectors-and-spaces/dot-cross-products/v/vector-dot-product-and-vector-length) if you want a repetition."
    ]
   },
   {
@@ -220,7 +227,7 @@
    "metadata": {},
    "source": [
     "Let's write \n",
-    "$$\\hat{y}(x) = \\theta_0 + \\theta_1 x$$\n",
+    "$$\\hat{y}(x) = \\theta_0x_0 + \\theta_1 x_1 = \\theta \\cdot \\mathbf{x}, \\qquad \\mbox{where} \\quad x_0 = 1$$\n",
     "for the straight line we'll try to fit to the data."
    ]
   },
@@ -243,6 +250,13 @@
    "metadata": {},
    "source": [
     "$$\\mbox{MSE}(\\theta) = \\frac1m \\sum_{i=1}^m \\big(\\theta \\cdot \\mathbf{x} - y^{(i)} \\big)^2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(and, sometimes, the **root mean square error** (RMSE), which is simply $\\sqrt{\\mbox{MSE}(\\theta)}$.)"
    ]
   },
   {
@@ -367,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In fact, you can compute this result _exactly_ by using MAT108 stuff: differentiate the MSE function with respect to $\\theta$, and solve for $\\theta$ when setting the derivative to zero. The solution, called the **normal equation**, gives the exact values for $\\theta$ that are best."
+    "In fact, you can compute this result _exactly_ by using MAT108 techniques: differentiate the MSE function with respect to $\\theta$, and solve for $\\theta$ when setting the derivative to zero. The solution, called the **normal equation**, gives the exact values for $\\theta$ that are best."
    ]
   },
   {
@@ -411,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember (from MAT108 or from school) that the derivative of a function can tell you where it is increasing and decreasing. Think of the following example, where we have a function of one variable:"
+    "Remember (from MAT108 or from high school) that the derivative of a function can tell you where it is increasing and decreasing. Think of the following example, where we have a function of one variable:"
    ]
   },
   {
@@ -537,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To implement this algorithm we need a way to find (or estimate) the gradient of the cost function with respect to the parameters $\\theta$. \n",
+    "To implement this algorithm we need a way to calculate (or estimate) the gradient of the cost function with respect to the parameters $\\theta$. \n",
     "\n",
     "Luckily, mean square error is such an easy function and calculating the gradient directly is not hard. It involves a bit of vector calculus which may be unfamiliar to you, but, believe me, a small calulation results in "
    ]
@@ -586,7 +600,7 @@
    "outputs": [],
    "source": [
     "eta = 0.01\n",
-    "n_epochs = 500 # One pass through all the training data is called an epoch"
+    "n_epochs = 500 # We'll go through the training data many times. One pass through is called an epoch."
    ]
   },
   {
@@ -810,18 +824,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "####"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Here are some animations to help you see what's going on:"
    ]
@@ -829,9 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -844,9 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#ani_001 # Uncomment to display animation"
@@ -855,9 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#ani_01"
@@ -866,9 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#ani_05"
@@ -876,27 +878,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We notice that, unsurprisingly, very low learning rates lead to very slow convergence. Also, very high learning rates leads to something that doesn't converge at all! Why is that?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "<img src=\"assets/smalllr.png\"> <img src=\"assets/biglr.png\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> **Your turn!**\n",
     "- Use **grid search** to find a good learning rate for a fixed number of epochs. Set `n_epochs=100` and search through a set of learning rates for the one that results in the lowest cost for that number of epochs."
@@ -1265,7 +1261,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*The following animation is based on a modification of code in the book. See the file `grad_descent_animation.py` for the code.*"
+    "<img src=\"assets/grad_descent_comparisons.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*The above image is created by a slight modification of code in the book. See the file `grad_descent_comparison.py` for the code.*"
    ]
   },
   {
@@ -1274,14 +1277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load grad_descent_animation.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TBA**"
+    "# %load grad_descent_comparison.py"
    ]
   },
   {
