--- a/Part3-training_models/DAT158-Part3-1-GradientDescent.ipynb
+++ b/Part3-training_models/DAT158-Part3-1-GradientDescent.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "<b><span style=\"font-size:150%\">Work in progress</span></b>\n",
     "\n",
-    "version September 15th, 2018"
+    "version September 16th, 2018"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alexander S. Lundervold, September 15th, 2018"
+    "Alexander S. Lundervold, September 16th, 2018"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\cdot$ is the dot product (also called the scalar product or the inner product). See [Khan Academy: Vector dot product and vector length](https://nb.khanacademy.org/math/linear-algebra/vectors-and-spaces/dot-cross-products/v/vector-dot-product-and-vector-length) if you want a repetition."
+    "where $\\cdot$ is the dot product (also called the scalar product or the inner product). See [Khan Academy: Vector dot product and vector length](https://nb.khanacademy.org/math/linear-algebra/vectors-and-spaces/dot-cross-products/v/vector-dot-product-and-vector-length) if you want a refresher."
    ]
   },
   {
@@ -226,6 +226,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the result we're after:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"assets/regression_line.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load regline # Uncomment this to get the code used to generate the above plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's write \n",
     "$$\\hat{y}(x) = \\theta_0x_0 + \\theta_1 x_1 = \\theta \\cdot \\mathbf{x}, \\qquad \\mbox{where} \\quad x_0 = 1$$\n",
     "for the straight line we'll try to fit to the data."
@@ -249,14 +286,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mbox{MSE}(\\theta) = \\frac1m \\sum_{i=1}^m \\big(\\theta \\cdot \\mathbf{x} - y^{(i)} \\big)^2$$"
+    "$$\\begin{align}\\mbox{MSE}(\\theta) &= \\frac1m \\sum_{i=1}^m \\big(\\theta \\cdot \\mathbf{x}^{(i)} - y^{(i)} \\big)^2\\\\\n",
+    "\\end{align}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(and, sometimes, the **root mean square error** (RMSE), which is simply $\\sqrt{\\mbox{MSE}(\\theta)}$.)"
+    "(and, sometimes, the **root mean square error** (RMSE), which is simply $\\sqrt{\\mbox{MSE}(\\theta)}$.) Here $\\mathbf{x}^{(i)}$ and $y^{(i)}$ represent the i-th data point."
    ]
   },
   {
@@ -344,6 +382,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **Your turn!**\n",
+    "Try to calculate the MSE by hand if you use the line $\\frac12 + \\frac14 x$ as a model for the three data points \n",
+    "\n",
+    "$$\\mathbf{x}^{(1)} = (1,1) \\qquad \\mathbf{x}^{(2)} = (2,1) \\qquad \\mathbf{x}^{(3)} = (4,2)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###"
    ]
   },
@@ -358,29 +406,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the result we're after:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"assets/regression_line.png\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %load regline # Uncomment this to get the code used to generate the above plot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "In fact, you can compute this result _exactly_ by using MAT108 techniques: differentiate the MSE function with respect to $\\theta$, and solve for $\\theta$ when setting the derivative to zero. The solution, called the **normal equation**, gives the exact values for $\\theta$ that are best."
    ]
   },
@@ -388,14 +413,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But let's try to get there using **gradient descent**, a hugely powerful (albeit very simple) algorithm that can be used to optimize any function, way beyond simple linear regression. "
+    "But let's try to get there using **gradient descent**, a hugely powerful (but very simple) algorithm that can be used to optimize any function, way beyond simple linear regression. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In general, **optimization** refers to the task of finding the minimum or maximum of a function $f(\\mathbf{x})$ by altering the variable $\\mathbf{x}$. In our case, we want to find the minimum of $MSE(\\theta)$ by altering $\\theta$."
+    "> In general, **optimization** refers to the task of finding the minimum or maximum of a function $f(\\mathbf{x})$ by altering the variable $\\mathbf{x}$. In our case, we want to find the minimum of $MSE(\\theta)$ by altering $\\theta$."
    ]
   },
   {
@@ -553,7 +578,12 @@
    "source": [
     "To implement this algorithm we need a way to calculate (or estimate) the gradient of the cost function with respect to the parameters $\\theta$. \n",
     "\n",
-    "Luckily, mean square error is such an easy function and calculating the gradient directly is not hard. It involves a bit of vector calculus which may be unfamiliar to you, but, believe me, a small calulation results in "
+    "Luckily, mean square error is such an easy function and calculating the gradient directly is not hard. It involves a bit of vector calculus which may be unfamiliar to you, but, believe me, if you reformulate MSE as\n",
+    "\n",
+    "$$\\mbox{MSE}(\\theta) =\\frac 1m (\\mathbf{X} \\theta - y)^T (\\mathbf{X} \\theta - y)$$\n",
+    "\n",
+    "where $\\mathbf{X}$ is the so-called **design matrix** containing all the training examples\n",
+    "$$\\mathbf{X} =  \\left(\\begin{array}{l} \\mathbf{x}^{(1)} \\\\ \\mathbf{x}^{(1)} \\\\ \\vdots \\\\ \\mathbf{x}^{(m)}\\end{array}\\right),$$ then a small calulation results in "
    ]
   },
   {
