illustration of linreg vs logreg

--- a/Part3-training_models/DAT158-Part3-4-Logistic_regression.ipynb
+++ b/Part3-training_models/DAT158-Part3-4-Logistic_regression.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><span style=\"font-size:150%\">Work in progress</span></b>\n",
-    "\n",
-    "version September 23rd, 2018"
+    "Alexander S. Lundervold, September 24th, 2018"
    ]
   },
   {
@@ -129,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Logistic regression** is a classification model (despite the name). One can build logistic regression from linear regression by first feeding the equation $\\theta \\cdot \\mathbf{x}$ through the **sigmoid function**:"
+    "**Logistic regression** is a classification model (despite the name). One can build logistic regression by feeding straight lines $\\theta \\cdot \\mathbf{x}$ through the **sigmoid function**:"
    ]
   },
   {
@@ -152,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is this sigmoid function? One thing's for sure: it should squeeze the output of $\\theta \\cdot \\mathbf{x}$ to values between 0 and 1, as it should be interpretable as a probablility. \n",
+    "What is this sigmoid function? It should squeeze the output of $\\theta \\cdot \\mathbf{x}$ to values between 0 and 1, as it should be interpretable as a probablility. \n",
     "\n",
     "Here it is mathematically:"
    ]
@@ -250,7 +248,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Illustration of relationship to linear regression to be added**"
+    "## The relationship between linear regression and logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"assets/logreg_linreg.png\">"
    ]
   },
   {
@@ -1340,7 +1345,7 @@
     {
      "data": {
       "text/plain": [
-       "('data/diabetes.csv', <http.client.HTTPMessage at 0x7f78dddba0b8>)"
+       "('data/diabetes.csv', <http.client.HTTPMessage at 0x7f08ec13d5f8>)"
       ]
      },
      "execution_count": 39,
