--- a/Part3-training_models/DAT158-Part3-4-Logistic_regression.ipynb
+++ b/Part3-training_models/DAT158-Part3-4-Logistic_regression.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Logistic regression** is a model for binary classification: one of the most used algorithms for classification and very simple to implement. "
+    "**Logistic regression** is a model for binary classification: one of the most used classification algorithms, and simple to implement. It's a statistical method develped in 1958, and used throughout medicine and social sciences, and also in machine learning."
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Logistic regression** is a classification model (despite the name). One can build logistic regression by feeding straight lines $\\theta \\cdot \\mathbf{x}$ through the **sigmoid function**:"
+    "**Logistic regression** is a classification model (despite the name). One can build logistic regression by feeding straight lines $\\theta \\cdot \\mathbf{x}$ through the **sigmoid function** $\\sigma$, also called the **logistic function** (hence the name of the method):"
    ]
   },
   {
@@ -141,7 +141,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and then predict the class by\n",
+    "This produces **probabilities** for belonging to class 1, that is \"the probability of $y=1$ given the instance $\\mathbf{x}$ and the parameters $\\theta$, written as $P(y=1 | \\mathbf{x}, \\theta)$. \n",
+    "\n",
+    "We can use these to predict: \n",
     "\n",
     "$$\\hat{y} = \\begin{cases} 0, \\quad \\mbox{if} \\quad \\hat{p} < 0.5,\\\\ 1, \\quad \\mbox{if} \\quad \\hat{p} \\geq 0.5 \\end{cases}$$"
    ]
