missing links added

--- a/Extra/DAT158 - Extra - 1 - Hyperparameter optimization.ipynb
+++ b/Extra/DAT158 - Extra - 1 - Hyperparameter optimization.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **There are some very interesting methods to make powerful models that optimize ML models, but that is beyond our scope in this notebook**. Have a look at AutoML or evolutionary algorithms or ... if you're curious."
+    "> **There are some very interesting methods to make powerful models that optimize ML models, but that is beyond our scope in this notebook**. Have a look at <a href=\"https://ai.googleblog.com/2017/05/using-machine-learning-to-explore.html\">AutoML</a> or <a href=\"https://en.wikipedia.org/wiki/Hyperparameter_optimization#Evolutionary_optimization\">evolutionary algorithms</a> if you're curious."
    ]
   },
   {
