--- a/Extra/DAT158 - Extra - 1 - Hyperparameter optimization.ipynb
+++ b/Extra/DAT158 - Extra - 1 - Hyperparameter optimization.ipynb
@@ -1424,7 +1424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO\n",
+    "# Under construction\n",
     "Use a more complicated data set to really illustrate the power of hyperparameter optimization."
    ]
   },
@@ -1632,18 +1632,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
+       "       max_depth=3, min_child_weight=1, missing=None, n_estimators=100,\n",
+       "       n_jobs=1, nthread=None, objective='multi:softprob',\n",
+       "       predictor='gpu_predictor', random_state=0, reg_alpha=0,\n",
+       "       reg_lambda=1, scale_pos_weight=1, seed=None, silent=True,\n",
+       "       subsample=1, tree_method='gpu_hist')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "xgb.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alexa\\Anaconda3\\envs\\dat158\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9366"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "xgb.score(X_test, y_test)"
    ]
@@ -1657,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,7 +1749,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
+     ]
+    }
+   ],
    "source": [
     "rs_xgb.fit(X_train, y_train)"
    ]
